src/core/config/transformer/type_merger/snapshots/tailcall__core__config__transformer__type_merger__type_merger__test__input_types.snap
---
source: src/core/config/transformer/type_merger/type_merger.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

input M1 {
  tar: String
}

type Query {
  bar(input: M1): String @http(path: "/bar")
  foo(input: M1): String @http(path: "/foo")
}
