src/core/config/transformer/type_merger/snapshots/tailcall__core__config__transformer__type_merger__type_merger__test__interface_types.snap
---
source: src/core/config/transformer/type_merger/type_merger.rs
expression: config.to_sdl()
---
interface M1 {
  a: Int
}

type C implements M1 {
  a: Int
}
